--- a/index.html
+++ b/index.html
@@ -16,10 +16,13 @@
   </div>
 
   <main class="page">
-    <!-- Верхняя панель с кнопкой "Скачать" -->
+    <!-- Верхняя панель: логотип + автор -->
     <header class="top-bar">
-      <div class="logo-text">NarkskorCalendar</div>
-      <a href="calendar.zip" class="btn-download">Скачать</a>
+      <div class="logo-text">КАНАЛ АВТОРА В Tg </div>
+      <a href="https://t.me/narkskor"
+         class="author-link"
+         target="_blank"
+         rel="noopener">@Narkskor</a>
     </header>
 
     <!-- Центр: заголовок + два стеклянных календаря -->
@@ -59,11 +62,14 @@
       </p>
     </section>
 
-    <!-- Низ страницы: подпись / контакт -->
+    <!-- Низ страницы: круглая кнопка скачивания с подписью -->
     <footer class="bottom-bar">
-      <p class="footer-text">
-        Подпишись на АВТОРА: <a href="https://t.me/narkskor" target="_blank" rel="noopener">@Narkskor</a>
-      </p>
+      <div class="download-wrapper">
+        <a href="calendar.zip"
+           class="btn-download"
+           aria-label="Скачать NarkskorCalendar"></a>
+        <span class="download-label">Скачать</span>
+      </div>
     </footer>
   </main>
 </body>
