Update download link to GitHub releases

--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
     <!-- Низ страницы: круглая кнопка скачивания с подписью -->
     <footer class="bottom-bar">
       <div class="download-wrapper">
-        <a href="calendar.zip"
-           class="btn-download"
-           aria-label="Скачать NarkskorCalendar"></a>
+        <a href="https://github.com/<USER>/<REPO>/releases/latest"
+   class="btn-download"
+   aria-label="Скачать NarkskorCalendar"></a>
         <span class="download-label">Скачать</span>
       </div>
     </footer>
